force-app/main/default/objects/DC_Panel__c/DC_Panel__c.object-meta.xml
<CustomObject>
    <label>Panel</label>
    <nameField>
        <label>Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>