force-app/main/default/objects/DC_Panel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;   Asset__r.Account.Id, Asset__r.Account.AccountNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>