force-app/main/default/objects/DC_Panel__c/fields/Connector_Type__c.field-meta.xml
<CustomField>
    <fullName>Connector_Type__c</fullName>
    <label>Connector Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>