force-app/main/default/objects/DC_Panel__c/fields/Height_RU__c.field-meta.xml
<CustomField>
    <fullName>Height_RU__c</fullName>
    <description>Height of this Panel in RU</description>
    <label>Height (RU)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>