force-app/main/default/objects/DC_Panel__c/fields/Mod_Model__c.field-meta.xml
<CustomField>
    <fullName>Mod_Model__c</fullName>
    <description>Do you manage your Meet Me Room Panels using the Mod model?</description>
    <label>Mod Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>