force-app/main/default/objects/DC_Panel__c/fields/Mod_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Mod_Pattern__c</fullName>
    <description>How Mods are populated within this Panel.</description>
    <inlineHelpText>How Mods are populated within this Panel.</inlineHelpText>
    <label>Mod Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From top left, right then down</fullName>
            </value>
            <value>
                <fullName>From top left, down then right</fullName>
            </value>
            <value>
                <fullName>From bottom left, right then up</fullName>
            </value>
            <value>
                <fullName>From top left, up then right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>