force-app/main/default/objects/DC_Panel__c/fields/MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Suite_ID__c</fullName>
    <label>MRI Suite ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>