force-app/main/default/objects/DC_Panel__c/fields/Number_of_Mods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mods__c</fullName>
    <description>Number of Mods that reside in this panel.</description>
    <label>Number of Mods</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>