force-app/main/default/objects/DC_Panel__c/fields/Number_of_Ports_per_Mod__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ports_per_Mod__c</fullName>
    <description>How many ports are included on each mod?</description>
    <label>Number of Ports per Mod</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>