force-app/main/default/objects/DC_Panel__c/fields/Number_of_Ports_Tall__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ports_Tall__c</fullName>
    <description>How many ports are across the entire panel (up and down)</description>
    <label>Number of Ports Tall</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>