force-app/main/default/objects/DC_Panel__c/fields/Number_of_Ports_Tall_per_Mod__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ports_Tall_per_Mod__c</fullName>
    <description>Number of ports across this Mod up to down.</description>
    <label>Number of Ports Tall - per Mod</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>