force-app/main/default/objects/DC_Panel__c/fields/Number_of_Ports_Wide_per_Mod__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ports_Wide_per_Mod__c</fullName>
    <description>Number of ports across this Mod lengthwise.</description>
    <label>Number of Ports Wide - per Mod</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>