force-app/main/default/objects/DC_Panel__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <label>Rack</label>
    <referenceTo>DC_Rack__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>