force-app/main/default/objects/DC_Panel__c/fields/Starting_Position_RU__c.field-meta.xml
<CustomField>
    <fullName>Starting_Position_RU__c</fullName>
    <description>Starting Position of this Panel in the Rack. 1 is the bottom RU.</description>
    <label>Starting Position (RU)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>