force-app/main/default/objects/DC_Panel__c/fields/Total_Number_of_Ports__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Ports__c</fullName>
    <description>Number of Ports Tall x Number of Ports Wide</description>
    <formula>Number_of_Ports_Tall__c * Number_of_Ports_Wide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Ports</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>