force-app/main/default/objects/DC_Panel__c/validationRules/Mod_Model_Dimensions_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mod_Model_Dimensions_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Mod_Model__c, &quot;No&quot;),
    OR(ISBLANK(Number_of_Ports_Tall__c), ISBLANK(Number_of_Ports_Wide__c))
)</errorConditionFormula>
    <errorMessage>When &quot;Mod Model&quot; is set to &quot;No,&quot; you must enter &quot;Number of Ports Tall&quot; and &quot;Number of Ports Wide.&quot;</errorMessage>
</ValidationRule>